--- a/7-BuildingFirstProject/demo/src/main/resources/application.properties
+++ b/7-BuildingFirstProject/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+logging.level.com.mahmutcelik.demo = debug
+logging.level.org.springframework = info
