--- a/7-BuildingFirstProject/demo/src/main/resources/application.properties
+++ b/7-BuildingFirstProject/demo/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.mvc.view.suffix=.jsp
 
 logging.level.com.mahmutcelik.demo = debug
 logging.level.org.springframework = info
+
+spring.mvc.format.date=yyyy-MM-dd
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled = true
+
+spring.jpa.defer-datasource-initialization=true
